--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
